fix: Hamburger overlaps title
Hamburger for dropdown in small screens used to overlap the title.
Added a margin-top

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2823,6 +2823,7 @@ input, select, textarea {
 			}
 
 				#header h1 {
+					margin-top: 20px;
 					color: #252122;
 					font-weight: 900;
 					font-size: 1.75em;
